--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "seer-platform",
   "version": "1.0.0",
   "main": "index.js",
+  "packageManager": "pnpm@10.18.3",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
