--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "^16.0.0",
     "lucide-react": "^0.544.0",
     "next": "^16.0.0",
+    "openai": "^6.7.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
