perplexity added + comprehensive tests

--- a/retrieval-agent/pytest.ini
+++ b/retrieval-agent/pytest.ini
@@ -16,7 +16,7 @@ addopts =
 # Markers for organizing tests
 markers =
     integration: Integration tests that call real APIs (deselect with '-m "not integration"')
-    unit: Unit tests with mocked dependencies
+    unit: Unit tests with mocked dependencies (default)
     slow: Tests that take >1 second
 
 # Async test support
