initial database / supabase client

--- a/retrieval-agent/pytest.ini
+++ b/retrieval-agent/pytest.ini
@@ -18,6 +18,7 @@ markers =
     integration: Integration tests that call real APIs (deselect with '-m "not integration"')
     unit: Unit tests with mocked dependencies (default)
     slow: Tests that take >1 second
+    database: Tests that interact with the database
 
 # Async test support
 asyncio_mode = auto
