--- a/retrieval-agent/requirements.txt
+++ b/retrieval-agent/requirements.txt
@@ -15,6 +15,11 @@ perplexityai>=0.20.0  # Perplexity Search API (NOTE: package name is 'perplexity
 # Database
 supabase>=2.0.0  # Supabase Python client for database operations
 
+# API Server
+fastapi>=0.104.0  # Modern web framework for APIs
+uvicorn[standard]>=0.24.0  # ASGI server for FastAPI
+sse-starlette>=1.8.2  # Server-Sent Events for FastAPI
+
 # Testing
 pytest>=7.4.3  # Testing framework
 pytest-asyncio>=0.21.1  # Async support for pytest
